# http-server

./: Cargo.toml  README.md
public/: index.html
src/: http.rs  main.rs  middleware.rs  router.rs  server.rs  service.rs
src/http/: mod.rs  parser.rs  request.rs  response.rs
