[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
futures-executor = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
